[Win] JSC Build Warnings Need to be Resolved. <https://webkit.org/b/142366>

Reviewed by Brent Fulgham.

Source/JavaScriptCore:

Applied some benign changes to make the MSVC compiler happy.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::dumpBytecode):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::fillJSValue):
* runtime/BasicBlockLocation.cpp:
(JSC::BasicBlockLocation::getExecutedRanges):
* runtime/ControlFlowProfiler.cpp:
(JSC::ControlFlowProfiler::hasBasicBlockAtTextOffsetBeenExecuted):

Source/WTF:

* wtf/Compiler.h:
- MSVC also does not have the CONSIDERS_UNREACHABLE_CODE quirk.


Canonical link: https://commits.webkit.org/160580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181334 268f45cc-cd09-0410-ab3c-d52691b4dbfc