Source/JavaScriptCore/runtime/ControlFlowProfiler.cpp
@@ -104,6 +104,7 @@ bool ControlFlowProfiler::hasBasicBlockAtTextOffsetBeenExecuted(int offset, intp
     int bestDistance = INT_MAX;
     BasicBlockRange bestRange;
     bestRange.m_startOffset = bestRange.m_endOffset = -1;
+    bestRange.m_hasExecuted = false; // Suppress MSVC warning.
     // Because some ranges may overlap because of function boundaries, make sure to find the smallest range enclosing the offset.
     for (BasicBlockRange range : blocks) {
         if (range.m_startOffset <= offset && offset <= range.m_endOffset && (range.m_endOffset - range.m_startOffset) < bestDistance) {
